2010-01-28 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* UnmanagedMemoryStream.cs: fix a regression from my previous patch.

2010-01-26  Marek Habersack  <mhabersack@novell.com>

	* SearchOption.cs: included in 2.1 build as internal to fix
	the build.

2010-01-25 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* DirectoryInfo.cs: new overload for GetFileSystemInfos().

2010-01-25 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* UnmanagedMemoryStream.cs: add the SafeBuffer overloads.

2010-01-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* StreamReader.cs: When detecting the encoding we usually check the
	four first bytes looking for either UTF32 or UTF8 BOM, since they share
	the first two bytes, but if we happen to have less than 4 bytes at
	detection time, just check for Unicode and use it as the current
	encoding - this is exactly what .Net does, and it is specially visible
	with NetworkStream.
	Fixes #534137.

2010-01-19  Alan McGovern  <amcgovern@novell.com>
	* BufferedStream.cs: Patch by Tom Philpot to optimise ReadByte and
	WriteByte significantly by making them fulfill their request by
	directly reading from the buffer.

2010-01-14  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* UnmanagedMemoryStream.cs: Read: don't read bytes one-by-one, read all
	at once.

2010-01-03  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* MemoryStream.cs: Don't clear the bytes beyond Length when shrinking
	it. Instead just save the related information for it and do it when
	Length grows and touchs that dirty region. Refactor the code where
	needed to avoid duplication as well.
	Fixes #327053.

2009-12-21  Sebastien Pouliot  <sebastien@ximian.com>

	* File.cs (ReadAllBytes): We cannot assume that a single call to
	Read will return all the data we require.

2009-11-24  Marek Safar <marek.safar@gmail.com>

	* StreamReader.cs, FileStream.cs: Use recycle buffer to avoid
	repeated underlying buffer initialization (saves hefty 10MB
	during corlib compilation).
	